edit index.html and style.css of ej4

--- a/topic-0/topic-0-css/ej4/index.html
+++ b/topic-0/topic-0-css/ej4/index.html
@@ -12,13 +12,37 @@
 	<body>
 	<header class="header">NARUTO SHIPPUDEN CHARACTERS</header>
 	<aside class="sidebar">Naruto: Shippuden is the ongoing sequel to the original Naruto anime and covers the Naruto manga from volume twenty-eight on. The TV adaptation of Naruto: Shippuden debuted in Japan on February 15, 2007 on TV Tokyo. It is developed by Studio Pierrot and directed by Hayato Date.</aside>
-	<div id="container">	
-	<img src="images\naruto.jpg">
-	<img src="images\sasuke.jpg">
-	<img src="images\itachi.jpg">
-	<img src="images\deidara.jpg">
-	<img src="images\orochimaru.jpg">
-	<img src="images\sasori.jpg">
+	<div>
+<ul>
+	<li>
+		<img src="images\naruto.jpg">
+		<div class="info">
+			<p>UZUMAKI NARUTO</p>		
+		</div>
+	</li>
+	<li>
+		<img src="images\sasuke.jpg">
+		<div class="info">
+			<p>UCHIHA SASUKE</P>
+		</div>
+	</li>
+	<li>
+		<img src="images\itachi.jpg">
+		<div class="info">UCHIHA ITACHI</div>
+	</li>
+	<li>
+		<img src="images\deidara.jpg">
+		<div class="info">DEIDARA</div>
+	</li>
+	<li>
+		<img src="images\orochimaru.jpg">
+		<div class="info">OROCHIMARU</div>
+	</li>
+	<li>
+		<img src="images\sasori.jpg">
+		<div class="info">SASORI</div>
+	</li>
+</ul>
 </div>
 
 	</body>
