--- a/topic-0/topic-0-css/ej4/index.html
+++ b/topic-0/topic-0-css/ej4/index.html
@@ -28,19 +28,28 @@
 	</li>
 	<li>
 		<img src="images\itachi.jpg">
-		<div class="info">UCHIHA ITACHI</div>
+		<div class="info">
+			<p>UCHIHA ITACHI
+			</p>
+		</div>
 	</li>
 	<li>
 		<img src="images\deidara.jpg">
-		<div class="info">DEIDARA</div>
+		<div class="info">
+			<p>DEIDARA</p>
+		</div>
 	</li>
 	<li>
 		<img src="images\orochimaru.jpg">
-		<div class="info">OROCHIMARU</div>
+		<div class="info">
+			<p>OROCHIMARU</p>
+		</div>
 	</li>
 	<li>
 		<img src="images\sasori.jpg">
-		<div class="info">SASORI</div>
+		<div class="info">
+			<p>SASORI</p>
+		</div>
 	</li>
 </ul>
 </div>
