--- a/topic-0/topic-0-css/ej4/index.html
+++ b/topic-0/topic-0-css/ej4/index.html
@@ -17,38 +17,38 @@
 	<li>
 		<img src="images\naruto.jpg">
 		<div class="info">
-			<p>UZUMAKI NARUTO</p>		
+			<h3><p class="text">UZUMAKI NARUTO</p></h3>		
 		</div>
 	</li>
 	<li>
 		<img src="images\sasuke.jpg">
 		<div class="info">
-			<p>UCHIHA SASUKE</P>
+			<h3><p class="text">UCHIHA SASUKE</P></h3>
 		</div>
 	</li>
 	<li>
 		<img src="images\itachi.jpg">
 		<div class="info">
-			<p>UCHIHA ITACHI
-			</p>
+			<h3><p class="text">UCHIHA ITACHI
+			</p></h3>
 		</div>
 	</li>
 	<li>
 		<img src="images\deidara.jpg">
 		<div class="info">
-			<p>DEIDARA</p>
+			<h3><p class="text">DEIDARA</p></h3>
 		</div>
 	</li>
 	<li>
 		<img src="images\orochimaru.jpg">
 		<div class="info">
-			<p>OROCHIMARU</p>
+			<h3><p class="text">OROCHIMARU</p></h3>
 		</div>
 	</li>
 	<li>
 		<img src="images\sasori.jpg">
 		<div class="info">
-			<p>SASORI</p>
+			<h3><p class="text">SASORI</p></h3>
 		</div>
 	</li>
 </ul>
