solve mistake in mozilla

--- a/topic-0/topic-0-css/ej4/index.html
+++ b/topic-0/topic-0-css/ej4/index.html
@@ -10,8 +10,9 @@
 	</head>
 
 	<body>
-	<header class="header">NARUTO SHIPPUDEN CHARACTERS</header>
-	<aside class="sidebar">Naruto: Shippuden is the ongoing sequel to the original Naruto anime and covers the Naruto manga from volume twenty-eight on. The TV adaptation of Naruto: Shippuden debuted in Japan on February 15, 2007 on TV Tokyo. It is developed by Studio Pierrot and directed by Hayato Date.</aside>
+	<header class="header">NARUTO SHIPPUDEN CHARACTERS
+	<aside class="sidebar">Naruto: Shippuden is the ongoing sequel to the original Naruto anime and covers the Naruto manga from volume twenty-eight on. The TV adaptation of Naruto: Shippuden debuted in Japan on February 15, 2007 on TV Tokyo. It is developed by Studio Pierrot and directed by Hayato Date.</aside></header>
+	
 	<div>
 <ul>
 	<li>
