change in index.html, header exercise

--- a/topic-0/index.html
+++ b/topic-0/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <HTML>
-	<HEAD>My Todo List
+	<HEAD>
 		<meta charset="utf-8">
 		<meta name="description" content="todo list">
 		<meta name="author" content="Martin Pastore">
 	<TITLE></TITLE>
 	</HEAD>
 	<BODY>
-		<header>Hello World</header>
+		<header>My Todo List</header>
 		<ul>
 		<h3><b>Todo Items</b></h3>
 		<li>Learn HTML & Css</li>
