--- a/topic-1-y-2/topic-1/index.html
+++ b/topic-1-y-2/topic-1/index.html
@@ -10,6 +10,7 @@
 			<section id="hidden">
 				Hello World
 			</section>
-			<input type="button" onClick="returnFunction()" value="boton" class="boton"/>
+			<input type="button" onClick="returnFunction()" value="boton" class="boton"/></br>
+			<input type="text" id="uri" value=""/><input type="button" onClick="ajaxCall()" id="btnCall" value="link"/>
 		</body>
 </html>
