--- a/topic-1-y-2/topic-1/index.html
+++ b/topic-1-y-2/topic-1/index.html
@@ -5,6 +5,7 @@
 		<script src="script.js"></script>
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	</head>
 		<body onLoad="showSection()">
 			<section id="hidden">
