--- a/topic-1-y-2/topic-1/index.html
+++ b/topic-1-y-2/topic-1/index.html
@@ -11,6 +11,8 @@
 			<section id="hidden">
 				Hello World
 			</section>
+			<div id="ajax">
+			</div>
 			<input type="button" onClick="returnFunction()" value="boton" class="boton"/></br>
 			<input type="text" id="uri" value=""/><input type="button" onClick="ajaxCall()" id="btnCall" value="link"/>
 		</body>
