--- a/topic-1-y-2/topic-1/Ej 9 - 12/index.html
+++ b/topic-1-y-2/topic-1/Ej 9 - 12/index.html
@@ -11,6 +11,6 @@
 <header>REPOSITORIES SEARCH</header>
 <body>
 <div id="repos"></div>
-<input type="button" value="boton" onClick="ajaxCall()"/>
+<input type="button" id="btnCall" value="Call" onClick="ajaxCall()"/>
 </body>
 </html>
