--- a/topic-1-y-2/topic-1/Ej 9 - 12/index.html
+++ b/topic-1-y-2/topic-1/Ej 9 - 12/index.html
@@ -12,5 +12,11 @@
 <body>
 <div id="repos"></div>
 <input type="button" id="btnCall" value="Call" onClick="ajaxCall()"/>
+<ul>
+	<li id="list1"></li>
+	<li id="list2"></li>
+	<li id="list3"></li>
+	<li id="list4"></li>
+</ul>
 </body>
 </html>
