--- a/topic-1-y-2/topic-1/Ej 1 - 8/index.html
+++ b/topic-1-y-2/topic-1/Ej 1 - 8/index.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<link href="style.css" rel="stylesheet">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="script.js"></script>
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	</head>
-		<body onLoad="showSection()">
+	    
+      </head>
+		<body>
 			<section id="hidden">
 				Hello World
 			</section>
