--- a/topic-1-y-2/topic-1/Ej 9 - 12/index.html
+++ b/topic-1-y-2/topic-1/Ej 9 - 12/index.html
@@ -2,21 +2,16 @@
 <html>
 <head>
 		<link href="style.css" rel="stylesheet">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="script.js"></script>
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<title></title>
 </head>
 <header>REPOSITORIES SEARCH</header>
 <body>
 <div id="repos"></div>
-<input type="button" id="btnCall" value="Call" onClick="ajaxCall()"/>
-<ul>
-	<li id="list1"></li>
-	<li id="list2"></li>
-	<li id="list3"></li>
-	<li id="list4"></li>
+<ul id="full_name_list">
 </ul>
 </body>
 </html>
