add ready to exercise 8

--- a/topic-1-y-2/topic-1/Ej 12/index.html
+++ b/topic-1-y-2/topic-1/Ej 12/index.html
@@ -9,6 +9,8 @@
 	<title></title>
 </head>
 <body>
+<input type="text" id="txtName" />
+<input type="text" id="txtAge" />	
 <input type="button" value="Create Table" id="btnSubmit" onClick="matrix()">
 </body>
 </html>
