--- a/topic-1-y-2/topic-1/Ej 12/index.html
+++ b/topic-1-y-2/topic-1/Ej 12/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <input type="text" id="txtName" />
-<input type="text" id="txtAge" />	
+<input type="text" id="txtAge" />
 <input type="button" value="Create Table" id="btnSubmit" onClick="matrix()">
+<div id="tab">
+</div>
 </body>
 </html>
