--- a/topic-1-y-2/topic-2/index.html
+++ b/topic-1-y-2/topic-2/index.html
@@ -9,6 +9,20 @@
 	<title></title>
 </head>
 <body>
-
+	<input type="button" id="showMov" value="Show Movies">
+	<div id="cart" class="hide">
+		<input type="button" id="btnMovie1" value="Star Wars VII">
+		<input type="button" id="btnMovie2" value="Harry Potter 7">
+		<input type="button" id="btnMovie3" value="IronMan 3">
+	</div>
+	<div id="sw7" class="hide">
+		bla
+	</div>
+	<div id="hp7" class="hide">
+		bla1
+	</div>
+	<div id="im3" class="hide">
+		bla2
+	</div>
 </body>
 </html>
