--- a/topic-1-y-2/topic-2/index.html
+++ b/topic-1-y-2/topic-2/index.html
@@ -9,30 +9,30 @@
 	<title></title>
 </head>
 <body>
-	<input type="button" id="showMov" value="Show Movies">
+	<input type="button" id="showMov" value="Show Movies" class="btn">
 	
 	<div id="cart" class="hide">
-		<input type="button" id="btnMovie1" value="Star Wars 7"/>
-		<input type="button" id="btnMovie2" value="Harry Potter 7"/>
-		<input type="button" id="btnMovie3" value="IronMan 3"/>
+		<input type="button" id="btnMovie1" value="Star Wars 7" class="btnMov"/>
+		<input type="button" id="btnMovie2" value="Harry Potter 7" class="btnMov"/>
+		<input type="button" id="btnMovie3" value="IronMan 3" class="btnMov"/>
 	</div>
 	<div id="sw7" class="hide">
-		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()"/>
-		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()"/>
-		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()"/></br>
-		<input type="text" id="txtShare"><input type="button" id="btnShare" value="Share with friend" onClick="starWars.share()"/><input type="button" id="btnLike" value="Like" onClick="starWars.like()"/>
+		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()" class="btnCtrl"/>
+		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()" class="btnCtrl"/>
+		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()" class="btnCtrl"/></br>
+		<input type="text" id="txtShare" class="txt"><input type="button" id="btnShare" value="Share with friend" onClick="starWars.share()" class="btnSoc"/><input type="button" id="btnLike" value="Like" onClick="starWars.like()" class="btnSoc"/>
 	</div>
 	<div id="hp7" class="hide">
-		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()"/>
-		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()"/>
-		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()"/></br>
-		<input type="text" id="txtShare"><input type="button" id="btnShare" value="Share with friend" onClick="harryPotter.share()"/><input type="button" id="btnLike" value="Like" onClick="harryPotter.like()"/>
+		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()" class="btnCtrl"/>
+		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()" class="btnCtrl"/>
+		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()" class="btnCtrl"/></br>
+		<input type="text" id="txtShare" class="txt"><input type="button" id="btnShare" value="Share with friend" onClick="harryPotter.share()"/ class="btnSoc"><input type="button" id="btnLike" value="Like" onClick="harryPotter.like()" class="btnSoc"/>
 	</div>
 	<div id="im3" class="hide">
-		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()"/>
-		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()"/>
-		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()"/></br>
-		<input type="text" id="txtShare"><input type="button" id="btnShare" value="Share with friend" onClick="ironman.share()"/><input type="button" id="btnLike" value="Like" onClick="ironman.like()"/>
+		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()" class="btnCtrl"/>
+		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()" class="btnCtrl"/>
+		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()" class="btnCtrl"/></br>
+		<input type="text" id="txtShare" class="txt"><input type="button" id="btnShare" value="Share with friend" onClick="ironman.share()" class="btnSoc"/><input type="button" id="btnLike" value="Like" onClick="ironman.like()" class="btnSoc"/>
 	</div>
 	<div>
 		<ul>
