--- a/topic-1-y-2/topic-2/index.html
+++ b/topic-1-y-2/topic-2/index.html
@@ -16,19 +16,25 @@
 		<input type="button" id="btnMovie2" value="Harry Potter 7" class="btnMov"/>
 		<input type="button" id="btnMovie3" value="IronMan 3" class="btnMov"/>
 	</div>
+	<ul>
+		<li id="status" class="stat"/>
+	</ul>
 	<div id="sw7" class="hide">
+		<img src="sw7.jpg">
 		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()" class="btnCtrl"/>
 		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()" class="btnCtrl"/>
 		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()" class="btnCtrl"/></br>
 		<input type="text" id="txtShare" class="txt"><input type="button" id="btnShare" value="Share with friend" onClick="starWars.share()" class="btnSoc"/><input type="button" id="btnLike" value="Like" onClick="starWars.like()" class="btnSoc"/>
 	</div>
 	<div id="hp7" class="hide">
+		<img src="hp7.jpg">
 		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()" class="btnCtrl"/>
 		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()" class="btnCtrl"/>
 		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()" class="btnCtrl"/></br>
 		<input type="text" id="txtShare" class="txt"><input type="button" id="btnShare" value="Share with friend" onClick="harryPotter.share()"/ class="btnSoc"><input type="button" id="btnLike" value="Like" onClick="harryPotter.like()" class="btnSoc"/>
 	</div>
 	<div id="im3" class="hide">
+		<img src="im3.jpg">
 		<input type="button" id="btnPlay" value="> Play" onClick="mov.play()" class="btnCtrl"/>
 		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()" class="btnCtrl"/>
 		<input type="button" id="btnPlay" value="« Resume" onClick="mov.resume()" class="btnCtrl"/></br>
@@ -36,7 +42,7 @@
 	</div>
 	<div>
 		<ul>
-			<li id="status"/>
+			
 			<li id="liShare"/>
 			<li id="liLike"/>
 		</ul>
