--- a/topic-1-y-2/topic-2/index.html
+++ b/topic-1-y-2/topic-2/index.html
@@ -31,18 +31,17 @@
 		<input type="button" id="btnPlay1" value="> Play" onClick="mov.play()" class="btnCtrl"/>
 		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()" class="btnCtrl"/>
 		<input type="button" id="btnResume" value="« Resume" onClick="mov.resume()" class="btnCtrl"/></br>
-		<input type="text" id="txtShare1" class="txt"><input type="button" id="btnShare" value="Share with friend" onClick="harryPotter.share()"/ class="btnSoc"><input type="button" id="btnLike" value="Like" onClick="harryPotter.like()" class="btnSoc"/>
+		<input type="text" id="txtShare1" class="txt"><input type="button" id="btnShare1" value="Share with friend" onClick="harryPotter.share()"/ class="btnSoc"><input type="button" id="btnLike1" value="Like" onClick="harryPotter.like()" class="btnSoc"/>
 	</div>
 	<div id="im3" class="hide">
 		<img src="im3.jpg">
 		<input type="button" id="btnPlay2" value="> Play" onClick="mov.play()" class="btnCtrl"/>
 		<input type="button" id="btnPause" value="|| Pause" onClick="mov.pause()" class="btnCtrl"/>
 		<input type="button" id="btnResume" value="« Resume" onClick="mov.resume()" class="btnCtrl"/></br>
-		<input type="text" id="txtShare2" class="txt"><input type="button" id="btnShare" value="Share with friend" onClick="ironman.share()" class="btnSoc"/><input type="button" id="btnLike" value="Like" onClick="ironman.like()" class="btnSoc"/>
+		<input type="text" id="txtShare2" class="txt"><input type="button" id="btnShare2" value="Share with friend" onClick="ironman.share()" class="btnSoc"/><input type="button" id="btnLike2" value="Like" onClick="ironman.like()" class="btnSoc"/>
 	</div>
 	<div>
-		<ul>
-			
+		<ul id="ulSoc" class="ulSoc">
 			<li id="liShare"/>
 			<li id="liLike"/>
 		</ul>
