ajax call in progress

--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -15,11 +15,10 @@
     	<li>{{ movies.name }}</li>
     	</ul>
     </nav>
-    <input type="button" value="Show Details" ng-click="mov()">
     <aside class="sidebar">
     <ul>
      <li ng-repeat="movies in movie"> 
-        {{movies.details}}
+        {{movies.actor1}}
      </li>
     </ul>
     </aside>
