--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -14,7 +14,7 @@
     <nav class="navigator">	
         <ul class="lMov">
     	<li>
-           Name: {{ Movies.name }}
+           {{ Movies.name }}
         </li>
     	</ul>
     </nav>
