--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -13,8 +13,8 @@
     <div ng-controller="MoviesCtrl">
     <nav class="navigator">	
         <ul class="lMov">
-    	<li ng-repeat="details in movie.details">
-           {{ details.name }}
+    	<li ng-repeat="mov in movie.name">
+           {{ mov.name }}
         </li>
     	</ul>
     </nav>
