work in progress

--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -1,7 +1,7 @@
 <html ng-app="moviesApp">
 <head>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js"></script>
+    <script src="https:///ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular-route.js"></script>
 	<script src="js/script.js"></script>
 	<link href="css/style.css" rel="stylesheet">
 	<meta charset="UTF-8">
