work in progress

--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -18,10 +18,6 @@
     	</ul>
     </nav>
     </div>
-    <selector class="selector">
-        <div ng-controller="MainCtrl"> 
-        </div>
-    </selector>
-
+    <div ng-view></div>
 </body>
 </html>
