exercise 2 work in progress

--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -19,7 +19,7 @@
     </div>
     <div ng-controller="MoviesCtrl">
         <ul>
-        <li ng-repeat="mov in movie.details[$index]">
+        <li ng-repeat="mov in movie.details[$index])">
            {{ mov.actor1 }} <br/>
            {{ mov.actor2 }} <br/>
            {{ mov.actor3 }} <br/>
