--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -1,6 +1,7 @@
 <html ng-app="moviesApp">
 <head>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <link href="css\style.css" rel="stylesheet">
     <meta charset="UTF-8">
@@ -12,20 +13,18 @@
     <nav class="navigator"> 
         <ul class="lMov">
         <li ng-repeat="mov in movie.details">
-          <input type="button" value="{{ mov.name }}" ng-click="showDetails($index)"></a>
+          <input type="button" value="{{ mov.name }}" ng-click="showDetails($index)">
         </li>
         </ul>
     </nav>
-    </div>
-    <div ng-controller="MoviesCtrl">
-        <ul>
-        <li ng-repeat="mov in movie.details[$index])">
+    <ul>
+        <li dirShow ng-repeat="mov in movie.details">
            {{ mov.actor1 }} <br/>
            {{ mov.actor2 }} <br/>
            {{ mov.actor3 }} <br/>
            {{ mov.premiere }} <br/>
-        </li>
-        </ul>
+       </li>
+    </ul>   
     </div>
 </body>
 </html>
