--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -22,6 +22,29 @@
         {{greeting}}
        </li>
    </ul>
+
+   <br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<input type="button" value="Delete" ng-click="delete($index)" class="btn">
+    <p>Name:</p> <input type="text" id="txtName"> </br>
+    <p>Actor1:</p> <input type="text" id="txtActor1"></br>
+    <p>Actor2:</p> <input type="text" id="txtActor2"></br>
+    <p>Actor3:</p> <input type="text" id="txtActor3"></br>
+    <p>Premiere:</p> <input type="text" id="txtPremiere"></br>
+    <input type="button" id="btnAdd" value="Add" class="btn" ng-click="add()">
     </div>
 </body>
 </html>
