--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -45,6 +45,7 @@
     <p>Actor3:</p> <input type="text" id="txtActor3"></br>
     <p>Premiere:</p> <input type="text" id="txtPremiere"></br>
     <input type="button" id="btnAdd" value="Add" class="btn" ng-click="add()">
+    <input type="button" id="btnEdit" value="Edit" class="btn" ng-click="edit($index)">
     </div>
 </body>
 </html>
