--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -14,6 +14,8 @@
         <ul class="lMov">
         <li ng-repeat="mov in movie.details track by $index">
           <input type="button" value="{{ mov.name }}" ng-click="show($index)" class="btn">
+          <input type="button" value="Delete" ng-click="delete($index)" class="btn">
+          <input type="button" value="Edit" ng-click="edit($index)" class="btn">
         </li>
         </ul>
     </nav>
@@ -38,14 +40,12 @@
 <br/>
 <br/>
 <br/>
-<input type="button" value="Delete" ng-click="delete($index)" class="btn">
     <p>Name:</p> <input type="text" id="txtName"> </br>
     <p>Actor1:</p> <input type="text" id="txtActor1"></br>
     <p>Actor2:</p> <input type="text" id="txtActor2"></br>
     <p>Actor3:</p> <input type="text" id="txtActor3"></br>
     <p>Premiere:</p> <input type="text" id="txtPremiere"></br>
     <input type="button" id="btnAdd" value="Add" class="btn" ng-click="add()">
-    <input type="button" id="btnEdit" value="Edit" class="btn" ng-click="edit($index)">
     </div>
 </body>
 </html>
