--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -9,7 +9,7 @@
     <title></title>
 </head>
 <body>
-    <div ng-controller="MoviesCtrl">
+    <div ng-controller="MoviesCtrl" class="movs">
     <nav class="navigator"> 
         <ul class="lMov">
         <li ng-repeat="mov in movie.details track by $index">
@@ -24,28 +24,16 @@
         {{greeting}}
        </li>
    </ul>
-
-   <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+<div class="frm">
     <p>Name:</p> <input type="text" id="txtName"> </br>
     <p>Actor1:</p> <input type="text" id="txtActor1"></br>
     <p>Actor2:</p> <input type="text" id="txtActor2"></br>
     <p>Actor3:</p> <input type="text" id="txtActor3"></br>
     <p>Premiere:</p> <input type="text" id="txtPremiere"></br>
     <input type="button" id="btnAdd" value="Add" class="btn" ng-click="add()">
+</div>
     </div>
+
 </body>
 </html>
