--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 </head>
+<header class="header">CINEMMA IN HOUSE</header>
 <body>
     <div ng-controller="MoviesCtrl" class="movs">
     <nav class="navigator"> 
@@ -27,13 +28,12 @@
 <br/>
 <div class="frm">
     <p>Name:</p> <input type="text" id="txtName"> </br>
-    <p>Actor1:</p> <input type="text" id="txtActor1"></br>
-    <p>Actor2:</p> <input type="text" id="txtActor2"></br>
-    <p>Actor3:</p> <input type="text" id="txtActor3"></br>
+    <p>Actor 1:</p> <input type="text" id="txtActor1"></br>
+    <p>Actor 2:</p> <input type="text" id="txtActor2"></br>
+    <p>Actor 3:</p> <input type="text" id="txtActor3"></br>
     <p>Premiere:</p> <input type="text" id="txtPremiere"></br>
     <input type="button" id="btnAdd" value="Add" class="btn" ng-click="add()">
 </div>
     </div>
-
 </body>
 </html>
