--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -20,11 +20,13 @@
         </li>
         </ul>
     </nav>
+     <div>
     <ul class="contain">
         <li class="param">
         {{greeting}}
        </li>
    </ul>
+    </div>
 <br/>
 <div class="frm">
     <p>Name:</p> <input type="text" id="txtName"> </br>
@@ -35,5 +37,6 @@
     <input type="button" id="btnAdd" value="Add" class="btn" ng-click="add()">
 </div>
     </div>
+
 </body>
 </html>
