--- a/topic-3/index.html
+++ b/topic-3/index.html
@@ -29,11 +29,11 @@
     </div>
 <br/>
 <div class="frm">
-    <p>Name:</p> <input type="text" id="txtName"> </br>
-    <p>Actor 1:</p> <input type="text" id="txtActor1"></br>
-    <p>Actor 2:</p> <input type="text" id="txtActor2"></br>
-    <p>Actor 3:</p> <input type="text" id="txtActor3"></br>
-    <p>Premiere:</p> <input type="text" id="txtPremiere"></br>
+    <p>Name:</p> <input type="text" id="txtName" class="txt"> </br>
+    <p>Actor 1:</p> <input type="text" id="txtActor1" class="txt"></br>
+    <p>Actor 2:</p> <input type="text" id="txtActor2" class="txt"></br>
+    <p>Actor 3:</p> <input type="text" id="txtActor3" class="txt"></br>
+    <p>Premiere:</p> <input type="text" id="txtPremiere" class="txt"></br>
     <input type="button" id="btnAdd" value="Add" class="btnSmall" ng-click="add()">
 </div>
     </div>
